--- a/pages/Vol4.html
+++ b/pages/Vol4.html
@@ -2,44 +2,15 @@
 
 <span>
          <h2 class="major">
-    The Process of Transferring Energy</h2>
+    Transferring Energy on Earth</h2>
     <p>You will now learn how energy is transferred on Earth between the land, water, and atmosphere.</p>
-<h3>How does a tornado form, and where?</h3>
-<blockquote>We do not know for sure how a tornado forms, but we speculate that:</blockquote>
-<ul>
-    <li>Most tornadoes form from thunderstorms</li>
-    <li>Moist, warm air and cold air should meet up</li>
-    <li>The meeting up of these two air temperatures creates an instability in the atmosphere</li>
-    <li>In the lower atmosphere, an invisible spinning effect is created, after wind direction and wind speed change</li>
-    <li>Rising air tilts the spinning effect from horizontal to vertical, extending through most of the storm</li>
-</ul>
-<blockquote>In the United States, tornadoes tend to form in the Great Plains (found near central USA), and a part of florida bordering the Gulf of Mexico. The area in the Great Plains of Central USA is known as Tornado Alley where cold air from Canada meets the warm air from the Gulf of Mexico. On average nine tornadoes occur each year in Oklahoma and Texas (per 10,000 square miles).</blockquote>
-    <h3>Let's bust some myths, and prove some facts!</h3>
-    #1: If you live in a big city, a tornado will not hit you.
-    <blockquote>MYTH! In the past, a tornado has hit many big cities, including Dallas, Miami, and Salt Lake city. In addition, a tornado that hits a big city will have more debris than a tornado in the farmland!</blockquote>
-    #2: Tornados have picked people/animals up, and set them down without injury or damage.
-    <blockquote>FACT! Some people and animals have been transported over 1/4 mile without injury! Even glass cups and precious mugs have been picked up and set down without damage</blockquote>
-    #3: A tornado can drive a straw through a telephone pole
-    <blockquote>FACT! While this certainly does sound like a myth, the forces inside a tornado are incredibly powerful and are strong enough to turn small objects into deadly ammunition.</blockquote>
-    #4: If you live in a city surrounded by rivers, there will be no tornadoes because tornados cannot pass over water
-    <blockquote>MYTH! Many tornados have crossed rivers and streams, and they did not lose any speed! While folklore says that the city is immune to tornados, they can be wrong and lead to devastating results.</blockquote>
-    #5: Brick or stone buildings will protect me entirely from a tornado
-    <blockquote>MYTH! The winds of a tornado can cause roofs or walls to cave in. Also, tornadoes can drive many projectiles into the brick, causing damage to the building. But, these buildings offer more protection than most other buildings.</blockquote>
-    #6: Tornadoes can occur during the winter or during the night.
-    <blockquote>FACT! The probability of a tornado occuring is lower at night and during winter, but it is still possible. In the past, there have been tornadoes that caused more death an destruction than any other tornados in that area!</blockquote>
-    #7: Equalize the pressure in your house by opening windows.
-    <blockquote>MYTH! A tornado can easily tear off your roof, or smash a car through your wall, and that will equalize the pressure for you. Don't waste your time!</blockquote>
-    <h3>A tornado is threatening me! What should I do?.</h3>
-    <ul>
-        <li>Go to your safe room, or if outside, seek shelter. If not, proceed to the next bullet points</li>
-        <li>If you find shelter, go to the lowest floor of the building, and go to the inner-most room which is the most protected from the outside. If you do not find shelter, proceed to the next bullet points</li>
-        <li>Do not try to outrun the tornado, they can go up to 70 miles per hour.</li>
-        <li>Go to any sturdy shelter nearby, as hail and lightning often accompany tornadoes</li>
-        <li>Find a place to lay down flat. Try to make sure that this place is out of the area where the tornado is heading, and is lower than other areas. </li>
-        <li>Do not hide under an overpass</li>
-        <li>Abandon your vehicle to seek shelter.<li>
-        <li>Avoid sheltering under/near solitary objects or groups of trees due to lightning.<li>
-        <li>Protect your head and neck</li>
-    </ul>
+<h2>Energy is transferred on Earth through convection, radiation, conduction, and evaporation.<h2>
+         <p>Conduction is the transfer of heat between two touching bodies. Convection is the transfer of heat throughout a substance. Radiation and evaporation are basic terms that you should already know.</p>
+         <h3>Atmosphere</h3>
+<blockquote>Land and water transfer energy to the atmosphere. The air masses sink from the atmosphere, come in contact with the warmer land and water, and that air gets heated up through conduction. That warmer air then heats up the air around it through convection. In addition, the land and water radiate thermal infrared energy, and some of that energy is absorbed by the atmosphere.</blockquote>
+    <h3>Land</h3>
+         <p>Since the water cools down slower than the land, it can be warmer than land at some points, so the oceans and seas transfer water to the land through convection. The land is also heated up by its core, but that's not important here because it only heats it up by a little bit. The land is also heated up by the sun's rays, something which the atmosphere's ozone layer protects us from.</p>
+    <h3>Water</h3>
+         <blockquote>Since land heats up faster than water, the land transfers heat to the water through convection. The water is also heated up by the sun's rays. The atmosphere's ozone layer protects us from the sun's harmful ultraviolet radiation. </blockquote>
 <button onclick="location.hash='#quiz'">Next Lesson</button>
 </span>
